# collector

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.base.json  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
docs/: DATABASE.md  PACKAGING.md  RELEASE.md  ROADMAP.md  UPDATES.md  VAULT_SCHEMA.md
scripts/: create-roadmap-issues.sh  large-vault-empty-index-smoke.mjs  legacy-index-db.mjs  migrate-vault-layout.mjs  packaged-service-host-smoke.mjs  prepare-service-host-resources.sh  prepare-service-sidecar.sh  run-release-smoke.mjs  service-host-health-smoke.mjs  service-ipc-health-smoke.mjs  startup-index-smoke.mjs  tauri-dev.sh  vault-index-rebuild-smoke.mjs  verify-deb-packaging.sh  verify-release.sh  webview-ipc-transport-smoke.mjs
src/: App.css  App.tsx  index.css  main.tsx  startup-smoke-capture.ts  vite-env.d.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.dev.json  tauri.conf.json
src-tauri/binaries/: .gitkeep
src-tauri/capabilities/: default.json
src-tauri/resources/: .gitkeep
src-tauri/src/: lib.rs  main.rs  service_domain_host.rs  service_ipc.rs  service_lock.rs  service_logs.rs  service_mode.rs  service_supervise.rs  vault_fs.rs  vault_watcher.rs
src/adapters/: tauri-fs.ts  tauri-sql.ts
src/context/: AppSettingsContext.tsx
src/dev/: dev-vault-types.ts  http-byte-range.test.ts  http-byte-range.ts  is-dev-mock.ts  mock-collector.ts  mock-data.ts  mock-store.ts  vite-plugin-dev-vault.ts
src/hooks/: useAppUpdater.ts  useDashboardItems.ts  useFolderTree.ts  useMediaQuery.ts  (+8 more)
(+87 files in other folders)
